--- a/music-player-app/src/components/Slider/Slider.css
+++ b/music-player-app/src/components/Slider/Slider.css
@@ -5,6 +5,12 @@
   align-items: center;
 }
 
+.slider-container.vertical {
+  height: 100%;
+  width: auto;
+  padding: 0;
+}
+
 .slider {
   appearance: none;
   width: 100%;
@@ -27,7 +33,7 @@
   background: #4169e1;
   border-radius: 50%;
   cursor: pointer;
-  margin-top: -4px;
+  margin-top: -3px;
   transition: all 0.2s ease;
 }
 
@@ -38,8 +44,51 @@
   border-radius: 50%;
   cursor: pointer;
   border: none;
-  margin-top: -4px;
   transition: all 0.2s ease;
+}
+
+.slider.vertical {
+  writing-mode: vertical-lr;
+  direction: rtl;
+  width: 8px;
+  height: 100%;
+  padding: 0;
+}
+
+.slider.vertical::-webkit-slider-thumb {
+  margin: 0;
+  margin-top: -7px;
+  margin-left: -3px;
+}
+
+.slider.vertical::-moz-range-thumb {
+  margin: 0;
+  margin-top: -7px;
+  margin-left: -3px;
+}
+
+.slider::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: #2e3885;
+  border-radius: 3px;
+}
+
+.slider::-moz-range-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: #2e3885;
+  border-radius: 3px;
+}
+
+.slider.vertical::-webkit-slider-runnable-track {
+  width: 8px;
+}
+
+.slider.vertical::-moz-range-track {
+  width: 8px;
 }
 
 .slider::-webkit-slider-thumb:hover,
@@ -48,72 +97,15 @@
   background: #6389ff;
 }
 
-.slider::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 6px;
-  cursor: pointer;
-  background: #2e3885;
-  border-radius: 3px;
-}
-
-.slider::-moz-range-track {
-  width: 100%;
-  height: 6px;
-  cursor: pointer;
-  background: #2e3885;
-  border-radius: 3px;
-}
-
-.time-remaining {
-  margin-left: auto;
-  padding-left: 8px;
-  font-size: 0.9em;
-  color: #b4c6ff;
-}
-
-@media (width <= 768px) {
-  .slider-container {
-    padding: 8px 0;
-  }
-
-  .slider {
-    height: 4px;
-    width: 95%;
-  }
-
-  .slider::-webkit-slider-thumb {
-    width: 18px;
-    height: 18px;
-    margin-top: -7px;
-  }
-
-  .slider::-moz-range-thumb {
-    width: 18px;
-    height: 18px;
-    margin-top: -7px;
-  }
-
-  .time-remaining {
-    font-size: 0.8em;
-    padding-left: 6px;
-  }
-}
-
+/* Touch device optimization */
 @media (hover: none) {
-  .slider {
-    opacity: 1;
-    width: 95%;
-  }
-
   .slider::-webkit-slider-thumb {
-    transform: scale(1.1);
+    width: 20px;
+    height: 20px;
   }
 
   .slider::-moz-range-thumb {
-    transform: scale(1.1);
+    width: 20px;
+    height: 20px;
   }
-}
-
-.slider-container * {
-  user-select: none;
 }
